syntax = "proto3";

package auxpb;

import "google/api/annotations.proto";

option go_package = "pkg/api/v1/auxpb";

// Version models the version of the DSS.
//
// Follows https://semver.org/
message Version {
  string as_string = 1;
}

message GetVersionRequest {
  // GetVersion accepts no parameters
}

message GetVersionResponse {
  // The version of the DSS.
  Version version = 1;
}

message ValidateOauthRequest {
  // Validate the owner claim matches the provided owner.
  string owner = 1;
}

// Validate Oauth token response
message ValidateOauthResponse {
}

// Error response format for most errors
message StandardErrorResponse {
  // Human-readable error message; should be identical to `message` content.
  string error = 1;

  // Code for error category; uses standard gRPC response codes*, plus some
  // additional custom codes defined for this project (see
  // pkg/errors/errors.go).
  //
  // *https://developers.google.com/maps-booking/reference/grpc-api/status_codes
  int32 code = 2;

  // Human-readable error message.  Required by ASTM standards' APIs in most
  // error responses.
  string message = 3;

  // ID of error in the format E:<UUID> which allows fast lookups in the DSS
  // logs to relate a client's observed error response from the DSS to the
  // detailed logs related to that error in the internal DSS logs.
  string error_id = 4;
}

service DSSAuxService {
  // /dss/version
  //
  // Queries the version of the DSS.
  rpc GetVersion(GetVersionRequest) returns (GetVersionResponse) {
    option (google.api.http) = {
      get: "/aux/v1/version"
    };
  }

  // /dss/validate_oauth
  //
  // Validate Oauth token against the DSS.
  rpc ValidateOauth(ValidateOauthRequest) returns (ValidateOauthResponse) {
    option (google.api.http) = {
      get: "/aux/v1/validate_oauth"
    };
  }
}
